# VisionMatrix

./: .gitignore  1.html  NCNN_SETUP_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP.md  copy_models.bat  copy_models.sh  gradle.properties  settings.gradle.kts  transform.py  开发步骤.md  附件4-技术研究报告.docx  项目创新点.docx
app/: build.gradle.kts  proguard-rules.pro
app/ncnn/: .gitkeep  README_NCNN_SETUP.md
app/ncnn/lib/arm64-v8a/yolov8n_ncnn_model/: metadata.yaml  model_ncnn.py
app/src/main/: AndroidManifest.xml
app/src/main/assets/mobileclip_s0/: action_embeddings.json  generate_actions.py
app/src/main/cpp/: CMakeLists.txt  yolov8.cpp  yolov8.h  yolov8ncnn_jni.cpp
app/src/main/cpp/detection/: yolov8.cpp  yolov8.h  yolov8ncnn_jni.cpp
app/src/main/cpp/new_feature/: new_feature_jni.cpp  processor.cpp
app/src/main/java/com/tencent/ncnn/: Yolov8.java
app/src/main/java/com/visionmatrix/: MainActivity.kt
app/src/main/java/com/visionmatrix/actioncards/: ScenarioActivity.kt  SemanticMatcher.kt
app/src/main/java/com/visionmatrix/actioncards/components/: ActionCardView.kt
app/src/main/java/com/visionmatrix/actioncards/data/: CardsRepository.kt
app/src/main/java/com/visionmatrix/actioncards/domain/: LoadCardsUseCase.kt
app/src/main/java/com/visionmatrix/actioncards/model/: ActionCard.kt
app/src/main/java/com/visionmatrix/actioncards/ui/: ActionCardsPlaceholder.kt
app/src/main/java/com/visionmatrix/ctrlf/: CtrlFActivity.kt  DetectionOverlayView.kt  MainActivity.kt  YOLOv8Detector.kt
app/src/main/res/layout/: activity_ctrlf.xml  activity_main.xml  activity_scenario.xml
app/src/main/res/mipmap-mdpi/: ic_launcher.xml
app/src/main/res/mipmap-xhdpi/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
yolov8n_ncnn_model/: metadata.yaml
